--- a/MOBILE/html/new/funding_main.html
+++ b/MOBILE/html/new/funding_main.html
@@ -84,6 +84,17 @@ $(document).ready(function(){
 		freeMode: true,
 		draggable: true
 	});
+	
+
+    //프로그레스바
+    var dw = $(document).width()- 40; 
+    var aa = $('.funding_bar').width();
+    var aW = Math.round((aa/dw )* 100)
+    if(aW == 100){
+        $('.funding_bar').addClass('end');
+    }else{
+        $('.funding_bar').removeClass('end');
+    }
 });
 </script>
 <style>
