--- a/PC/html/new/orderChange.html
+++ b/PC/html/new/orderChange.html
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <td>배송대기</td>
                                 <td class="img">
                                     <a href="#n" class="btn_type05_v2 bg small" title="새창으로 열림" _onclick="cancelOrder('191216000001')">주문취소</a>
-                                    <a href="javascript://" class="btn_type05_v2 bg small mgt5" title="새창으로 열림" onclick="window.open('./popupChangeDeliveryDestination.html', 'popupChageDeliveryDestination', 'width=600,height=430');return false;">배송지변경</a>            
+                                    <a href="javascript://" class="btn_type05_v2 bg small mgt5" title="새창으로 열림" onclick="window.open('./popupChangeDeliveryDestination.html', 'popupChageDeliveryDestination', 'width=740,height=700', 'scrollbars=no');return false;">배송지변경</a>            
                                 </td>
                             </tr>
                             <tr> 
@@ -437,7 +437,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <td>배송대기</td>
                                 <td class="img">
                                     <a href="#n" class="btn_type05_v2 bg small" title="새창으로 열림" _onclick="cancelOrder('191216000001')">주문취소</a>
-                                    <a href="javascript://" class="btn_type05_v2 bg small mgt5" title="새창으로 열림" onclick="window.open('./popupChangeDeliveryDestination.html', 'popupChageDeliveryDestination', 'width=600,height=430');return false;">배송지변경</a>            
+                                    <a href="javascript://" class="btn_type05_v2 bg small mgt5" title="새창으로 열림" onclick="window.open('./popupChangeDeliveryDestination.html', 'popupChageDeliveryDestination', 'width=740,height=700', 'scrollbars=no');return false;">배송지변경</a>            
                                 </td>
                             </tr>
                             <tr> 
