--- a/PC/html/new/orderDelivery.html
+++ b/PC/html/new/orderDelivery.html
@@ -350,7 +350,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li>주문내역은 최대 1년 까지 조회 가능합니다.</li> 
                         <li>주문번호, 상품명을 클릭하시면 주문상세내역 및 배송현황을 확인하실 수 있습니다.</li>
                         <li>상품준비 이전 단계 시 주문 취소 가능합니다.</li>
-                        <li>주문취소/변경은 <strong>[마이핫트랙스 &gt; 주문취소/변경]</strong> 메뉴를 통해 가능합니다.</li>
+                        <li>주문취소/변경은 <strong><a href="javascript:;">[마이핫트랙스</a> &gt; <a href="javascript:;">주문취소/변경</a>]</strong> 메뉴를 통해 가능합니다.</li>
                     </ul>
                     <div class="mgt60 period_srch">
                         <h4 class="page_title border_type1">주문/배송조회 기간 설정</h4>
