--- a/PC/html/new/orderDeliveryDetail.html
+++ b/PC/html/new/orderDeliveryDetail.html
@@ -378,8 +378,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </td>
                                 <td class="t_left pdl10">
                                     <p>로이텀 미디엄 노트 뮤트 데님</p>
-                                    <p class="txt_option">LINE</p>
-                                    
+                                    <!-- <p class="txt_option">LINE</p> -->
                                 </td>
                                 <td class="only_english">3</td>
                                 <!-- <td class="right only_english">70,200원</td>
