--- a/PC/html/new/txinRequest.html
+++ b/PC/html/new/txinRequest.html
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <span class="mgl5"><a class="btn_type01_v2" href="#n" _onclick="goSearchOtherMonth()">조회</a></span> 
                         </div> -->
                         <div id ="orderInfo">
-                            <table class="bbs_list_v2 space_pad mgt20">
+                            <table class="bbs_list_v2 space_pad border mgt20">
                                 <caption>주문번호 조회 <span>선택, 주문번호, 결제완료일, 상품내역, 결제금액</span>
                                 </caption>
                                 <colgroup>
@@ -513,8 +513,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                     </span>
                                                 </div>
                                                 <div class="btns_go_wrap">                                                
-                                                    <a href="javascript://" onclick="window.open('/pages/html/searchTxinRequest.html', '', 'width=820,height=419');return false;" class="btn_type01_v2">조회</a>                
-                                                    <a href="javascript://" onclick="window.open('/pages/html/createFormTxinRequest.html', '', 'width=804,height=630');return false;" class="btn_type01_v2">등록</a>
+                                                    <a href="javascript://" onclick="window.open('./searchTxinRequest.html', '', 'width=980,height=650');return false;" class="btn_type05_v2 bg">조회</a>                
+                                                    <a href="javascript://" onclick="window.open('./createFormTxinRequest.html', '', 'width=804,height=750');return false;" class="btn_type05_v2 bg">등록</a>
                                                 </div>
                                             </div>                                            
                                         </td>
@@ -631,12 +631,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <div class="btn_area t_center mgt80">
                             <a href="#n" id="" class="btn_type04_v1">신청하기</a>
-                            <a href="#n" id="" class="btn_type04_v2">취소</a>
+                            <a href="#n" id="" class="btn_type04_v2 mgl20">취소</a>
                         </div>
                     </form>
-                    <div class="box_gray_02 distance positionR">
-                        <h4 class="page_title">세금계산서 신청 시 유의사항</h4>
-                        <a href="#n" _onclick="goFaq()" class="btn_type01_v2 mgl10 v_middle">세금계산서 FAQ</a>
+                    <div class="box_gray_02 distance">
+                        <div class="txin_title_wrap">
+                            <h4 class="page_title">세금계산서 신청 시 유의사항</h4>
+                            <a href="#n" _onclick="goFaq()" class="btn_type01_v2 mgl10">세금계산서 FAQ</a>
+                        </div>
                         <ul class="list_type02_v2 mgt25 mgb40">
                             <li>'세금계산서'는 과세/면세 각 1장씩 발행됩니다.</li>
                             <li>면세 상품은 꽃 종류, 도서(화보집)입니다.</li>
