--- a/PC/html/new/txinRequestList.html
+++ b/PC/html/new/txinRequestList.html
@@ -338,34 +338,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- sub contents -->
                 <div class="sub_contents">
                     <h3 class="page_title mgt0">세금계산서 신청내역</h3>
-				    <ul class="list_type02_v2 mgt20 mgb40">
+				    <ul class="list_type02_v2 mgt20 mgb0">
 				        <li>세금계산서 신청 내역 및 발급현황을 확인하실 수 있습니다.</li>
 				    </ul>
-				    <a href="#n" class="btn_type01_v2 f_left mgb20">세금계산서 신청</a>
-				    <table class="bbs_list_v2">
+                    <div class="t_ar mgt10">
+				        <a href="#n" class="btn_type05_v3">세금계산서 신청</a>
+                    </div>
+				    <table class="bbs_list_v2 mgt20">
 				        <caption>세금계산서 신청내역 <span>순번, 신청자명, 신청일, 발급일, 처리 상태</span>
 				        </caption>
 				        <colgroup>
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				            <col style="width:20%" />
-				            <col style="width:20%" />
+				            <col style="width:16%" />
+				            <col style="width:17%" />
+				            <col style="width:17%" />
+				            <col style="width:17%" />
+				            <col style="width:17%" />
+                            <col style="width:16%" />
 				        </colgroup>
 				        <thead>
 				            <tr>
 				                <th scope="col" class="fir">순번</th>
-				                <th scope="col">신청자명</th>
+                                <th scope="col">주문번호</th>
+                                <th scope="col">신청자명</th>
 				                <th scope="col">신청일</th>
 				                <th scope="col">발급일</th>
 				                <th scope="col" class="last">처리 상태</th>
 				            </tr>
 				        </thead>
 				        <tbody>
-				            
-				            <tr><td colspan="5" class="no_data">검색된 신청내역이 없습니다.</td></tr>
+				            <tr>
+                                <td>1</td>
+                                <td><a href="javascript:;" class="only_english">111014000069</a></td>
+                                <td>홍길동</td>
+                                <td class="only_english">2021.01.13</td>
+                                <td class="only_english">2021.01.13</td>
+                                <td>발급신청</td>
+                            </tr>
+
+				            <tr><td colspan="6" class="no_data">검색된 신청내역이 없습니다.</td></tr>
 				        </tbody>
 				    </table>
+                    <!-- paging -->
+                    <div class="paging cs mgt40">
+                        <a title="맨 처음 페이지로 이동" href="/ht/help/faqListC0391?page=1" class="first">처음</a>
+                        <ul>
+                            <li class="active">
+                                <a href="javascript://">1</a>
+                            </li>
+                        </ul>
+                        <a title="맨 나중 페이지로 이동" href="/ht/help/listNotice?page=1" class="next02">나중</a>
+                    </div>
                 </div>
                 <!-- //sub contents -->                
             </div>
