--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1350,7 +1350,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_main.html">./html/new/funding_main.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/funding_main.html">http://dev.hottracks.co.kr/html/new/funding_main.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1362,7 +1362,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_detail1.html">./html/new/funding_detail1.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/funding_detail1.html">http://dev.hottracks.co.kr/html/new/funding_detail1.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1374,7 +1374,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_detail2.html">./html/new/funding_detail2.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/funding_detail2.html">http://dev.hottracks.co.kr/html/new/funding_detail2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1386,7 +1386,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_detail3.html">./html/new/funding_detail3.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/funding_detail3.html">http://dev.hottracks.co.kr/html/new/funding_detail3.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -1398,7 +1398,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_orderSheet_member.html">./html/new/funding_orderSheet_member.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/funding_orderSheet_member.html">http://dev.hottracks.co.kr/html/new/funding_orderSheet_member.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
