--- a/PC/html/new/deposit.html
+++ b/PC/html/new/deposit.html
@@ -338,21 +338,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- sub contents -->
                 <div class="sub_contents">
                     <h3 class="page_title mgt0">교보핫트랙스 온라인 예치금</h3>
-                    <ul class="list_type02_v2 mgt20 mgb40">
+                    <ul class="list_type02_v2 mgt20 mgb0">
                         <li>교보핫트랙스 온라인 예치금은 결제대금 환불, 배송비 정산 등으로 발생한 금액입니다.</li>
                         <li>예치된 금액은 주문 결제 시 사용이 가능하며, 은행계좌로 환불신청을 하실 수 있습니다.</li>
                     </ul>
-                    <div class="box_gray02 mgb0 bt_line fs16">회원님의 교보핫트랙스 온라인 예치금은 현재 <span class="order_num">88,264,100원</span> 입니다.</div>
-                    <div class="bt_line"></div>
-                    
-                    <div class="tab1 mgt60">
+                    <div class="box_gray02 delivery_detail mgt15 regular">
+                        <span class="bold">교보핫트랙스 온라인 예치금은 현재</span>
+                        <span class="mgl10 order_num only_english color_01 bold">88,264,100</span>
+                        <span calss="">원 입니다.</span>
+                    </div>
+                    <!-- <div class="box_gray02 mgb0 bt_line fs16">회원님의 교보핫트랙스 온라인 예치금은 현재 <span class="order_num">88,264,100원</span> 입니다.</div>
+                    <div class="bt_line"></div> -->
+
+                    <div class="tab1 my mgt80">
                         <ul>
                             <li><a href="#n" class="on"><span>교보핫트랙스 온라인 예치금내역</span></a></li>
                             <li><a href="#n" ><span>환불신청내역</span></a></li>
-                            <li class="f_right mgt20"><a href="javascript://" onclick="window.open('/pages/html/popupDeposit.html', '', 'width=610,height=500');return false;" class="btn_type01_v2 f_right" style="height:inherit;">예치금 환불신청</a></li>
                         </ul>
                     </div>
-                    <div class="tab_cont">
+
+                    <div class="go_check_wrap borderno">
+                         <div class="txt_info">
+                             <p class="f_left fs14 color_03">보유하고 있는 예치금에 대한 환불을 신청하세요.</p>
+                             <div class="f_right">
+                                <a href="javascript://" onclick="window.open('./popupDeposit.html', '', 'width=610,height=500');return false;" class="btn_type06 f_right" style="height:inherit;">예치금 환불신청</a>
+                             </div>
+                         </div> 
+                     </div>
+
+                    <div class="tab_cont mgt20">
                         <h4 class="hidden_obj">교보핫트랙스 온라인 예치금내역</h4>
                         <table class="bbs_list_v2">
                             <caption>교보핫트랙스 온라인 예치금 내역 <span>변동일,변동사유,교보핫트랙스 온라인 예치금,주문번호</span></caption>
@@ -372,16 +386,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </thead>
                             <tbody>
                                 <tr> 
-                                    <td>2019.12.16</td> 
+                                    <td calss="only_english">2019.12.16</td> 
                                     <td>주문</td>
-                                    <td>315,600원</td> 
-                                    <td>191216000001</td>
+                                    <td class="color_01"><span calss="only_english base">315,600</span>원</td> 
+                                    <td calss="only_english">191216000001</td>
                                 </tr>
                                 <tr> 
-                                    <td>2019.12.06</td> 
+                                    <td calss="only_english">2019.12.06</td> 
                                     <td>주문</td>
-                                    <td>46,800원</td> 
-                                    <td>191206000004</td>
+                                    <td class="color_01"><span calss="only_english base">46,800</span>원</td> 
+                                    <td calss="only_english">191206000004</td>
+                                </tr>
+                                <tr>
+                                    <td class="no-data" colspan="4">온라인 예치금 내역이 없습니다.</td>
                                 </tr>
                             </tbody>
                         </table>
