--- a/PC/html/new/viewSpecificationOnTransaction.html
+++ b/PC/html/new/viewSpecificationOnTransaction.html
@@ -83,10 +83,10 @@ function goPrint() {
                             <tbody>
                                 <tr>
                                     <th>주문번호</th>
-                                    <td>No. 191205000004</td>
+                                    <td class="only_english">No. 191205000004</td>
                                     <td rowspan="4" class="t_center">공<br />급<br />자</td>
                                     <th>등록번호</th>
-                                    <td colspan="3">102-81-29258</td>
+                                    <td colspan="3" class="only_english">102-81-29258</td>
                                 </tr>
                                 <tr>
                                     <th>입금일</th>
@@ -117,7 +117,7 @@ function goPrint() {
                         <caption>결제 금권 상세정보</caption>
                         <colgroup>
                             <col style="width:92px" />
-                            <col style="width:92px" />
+                            <col style="width:140px" />
                             <col style="width:92px" />
                             <col style="width:*">
                         </colgroup>
@@ -141,13 +141,13 @@ function goPrint() {
                         <caption>거래명세서 상세정보</caption>
                         <colgroup>
                             <col style="width:92px" />
+                            <col style="width:140px" />
+                            <col style="width:*" />
                             <col style="width:92px" />
                             <col style="width:92px" />
                             <col style="width:92px" />
                             <col style="width:92px" />
-                            <col style="width:92px" />
-                            <col style="width:92px" />
-                            <col style="width:*">
+                            <col style="width:92px">
                         </colgroup>
                         <tbody>
                             <tr>
@@ -160,28 +160,28 @@ function goPrint() {
                                 <th>금액</th>
                             </tr>
                             <tr> 
-                                <td>1</td>
-                                <td class="t_left">2310036611216</td>  
+                                <td class="only_english">1</td>
+                                <td class=" only_english">2310036611216</td>  
                                 <td class="t_left" colspan="2">
                                     [주문제작]자수네임택쪼꼬미
                                     
                                     (색상 : 5 Orange 물고기)
                                 </td>  
-                                <td class="t_right">6,545</td>  
-                                <td class="t_right">655</td>   
-                                <td>1</td>  
-                                <td class="t_right">7,200</td>  
+                                <td class="t_right only_english">6,545</td>  
+                                <td class="t_right only_english">655</td>   
+                                <td class="only_english">1</td>  
+                                <td class="t_right only_english">7,200</td>  
                             </tr>
                             <tr class="tfoot">
                                 <th colspan="6">합계</th>
-                                <td>1</td>
-                                <td class="t_right">7,200</td>
+                                <td class="only_english">1</td>
+                                <td class="t_right only_english">7,200</td>
                             </tr>
                             <tr>
                                 <td>주문일자</td>
-                                <td>2019-12-05</td>
+                                <td class="only_english">2019-12-05</td>
                                 <td>배송비</td>
-                                <td>2,500</td>
+                                <td class="only_english">2,500</td>
                                 <td>포장비</td>
                                 <td colspan="3" class="t_right">0원</td>
                             </tr>
